@@ -1002,8 +1002,8 @@ class GO_Files_Controller_Folder extends GO_Base_Controller_AbstractModelControl
 
 	private function _createNewModelFolder(GO_Base_Db_ActiveRecord $model) {
 
-		//GO::debug("Create new model folder ".$model->className()."(ID:".$model->id.")");
-
+		GO::debug("Create new model folder ".$model->className()."(ID:".$model->id.")");
+		
 		$folder = GO_Files_Model_Folder::model()->findByPath($model->buildFilesPath(),true, array('acl_id'=>$model->findAclId(),'readonly'=>1));
 		
 		if(!$folder){
@@ -1040,6 +1040,9 @@ class GO_Files_Controller_Folder extends GO_Base_Controller_AbstractModelControl
 
 		$folder = false;
 		if ($model->files_folder_id > 0){
+			
+			GO::debug('Model has files_folder_id '.$model->files_folder_id);
+			
 			$folder = GO_Files_Model_Folder::model()->findByPk($model->files_folder_id, false, true);
 			
 			//record has an ID but the folder is missing from the database. Attempt to create new one.
@@ -1047,11 +1050,17 @@ class GO_Files_Controller_Folder extends GO_Base_Controller_AbstractModelControl
 		}
 
 		if ($folder) {
+			
+			GO::debug('Folder exists in database');
+					
 			$model->files_folder_id = $this->_checkExistingModelFolder($model, $folder, $mustExist);
 
 			if ($saveModel && $model->isModified())
 				$model->save(true);
 		}elseif (isset($model->acl_id) || $mustExist) {
+			
+			GO::debug('Folder does not exist in database. Will create it.');
+		
 			//this model has an acl_id. So we should create a shared folder with this acl.
 			//this folder should always exist.
 			//only new models that have it's own acl field should always have a folder.
