@@ -475,8 +475,9 @@ class GO_Files_Model_Folder extends GO_Base_Db_ActiveRecord {
 	//				$folder->setAttributes($autoCreateAttributes);
 	//				$folder->save();	
 				}
-
-				$this->_folderCache[$cacheKey]=$folder;
+				if(!GO::$disableModelCache){
+					$this->_folderCache[$cacheKey]=$folder;
+				}
 			}else
 			{
 				$folder = $this->_folderCache[$cacheKey];
@@ -1081,8 +1082,11 @@ class GO_Files_Model_Folder extends GO_Base_Db_ActiveRecord {
 			$this->_folderCache['Shared/'.$folderName]=$folder;
 			
 			//for findByPath
-			if($folder)
-				$this->_folderCache[$folder->parent_id.'/'.$folderName]=$folder;
+			if($folder){
+				if(!GO::$disableModelCache){
+					$this->_folderCache[$folder->parent_id.'/'.$folderName]=$folder;
+				}
+			}
 			
 		}
 		
